--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,6 +8,7 @@
       "type": "node",
       "request": "launch",
       "name": "Launch Program",
+      "cwd": "${workspaceFolder}/Server",
       "program": "${workspaceFolder}/Server\\index.js"
     }
   ]
