--- a/Server/package.json
+++ b/Server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "lowdb": "^1.0.0",
     "passport": "^0.4.0",
     "passport-google-oauth": "^1.0.0"
   }
