--- a/Server/package.json
+++ b/Server/package.json
@@ -9,10 +9,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "lowdb": "^1.0.0",
     "passport": "^0.4.0",
-    "passport-google-oauth": "^1.0.0"
+    "passport-local": "^1.0.0"
   }
 }
