--- a/Web/package.json
+++ b/Web/package.json
@@ -24,9 +24,12 @@
   },
   "dependencies": {
     "antd": "^3.10.1",
+    "js-cookie": "^2.2.0",
+    "md5.js": "^1.3.5",
     "mobx": "^5.5.0",
     "mobx-react": "^5.2.8",
     "react": "^16.5.2",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-router-dom": "^4.3.1"
   }
 }
