--- a/Server/package.json
+++ b/Server/package.json
@@ -12,8 +12,11 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-graphql": "^0.7.1",
     "express-session": "^1.15.6",
+    "graphql": "^14.0.2",
     "lowdb": "^1.0.0",
+    "merge-graphql-schemas": "^1.5.8",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
